--- a/about.html
+++ b/about.html
@@ -1,20 +1,50 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About — Taha Saleem</title>
-  <meta name="description" content="About Taha Saleem — Data Science undergraduate, ML & AI enthusiast." />
+  <meta name="description" content="About Taha Saleem — Data Science undergraduate, AI & ML enthusiast.">
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  
+  <!-- AOS (Animate on Scroll) -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #f9fafb);
+    }
+    .profile-pic {
+      max-width: 200px;
+      border-radius: 50%;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+    .section-light {
+      background: #ffffff;
+    }
+    .section-alt {
+      background: #f8fafc;
+    }
+  </style>
 </head>
 <body>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> <strong>Taha&nbsp;Saleem</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"><span class="navbar-toggler-icon"></span></button>
+      <a class="navbar-brand fw-bold" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> Taha Saleem</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
@@ -27,62 +57,67 @@
     </div>
   </nav>
 
-  <!-- ABOUT HERO -->
-  <header class="py-5 bg-light border-bottom">
-    <div class="container text-center">
-      <h1 class="display-5 fw-bold">About Me</h1>
-      <p class="lead text-secondary">Data Science Undergraduate | AI & ML Enthusiast</p>
-    </div>
-  </header>
-
-  <!-- ABOUT CONTENT -->
-  <section class="py-5">
+  <!-- ABOUT SECTION -->
+  <section class="py-5 text-center section-light">
     <div class="container">
-      <div class="row g-4 align-items-center">
-        <div class="col-12 col-lg-4 text-center">
-          <img src="assets/img/profile.jpg" class="img-fluid rounded-4 shadow-sm" alt="Photo of Taha Saleem">
-        </div>
-        <div class="col-12 col-lg-8">
-          <h2 class="h4">Who I Am</h2>
-          <p>Hi, I’m <strong>Taha Saleem</strong>, a passionate undergraduate student of <strong>Data Science at PUCIT</strong> (Expected Graduation: 2027). I enjoy turning complex data into meaningful insights and building tools powered by <strong>Machine Learning</strong>, <strong>Artificial Intelligence</strong>, and <strong>Data Visualization</strong>.</p>
-          <p>I’ve solved <strong>150+ problems on LeetCode</strong>, developed ML-powered applications, dashboards, and deployed interactive tools on <strong>Hugging Face</strong>. My interests span <strong>data-driven decision-making, AI agents, and dashboards</strong> that help solve real-world problems.</p>
-        </div>
-      </div>
+      <h1 class="fw-bold mb-4" data-aos="fade-up">About Me</h1>
+      <img src="assets/img/profile.jpg" alt="Taha Saleem" class="profile-pic mb-4" data-aos="zoom-in">
+      <p class="lead mx-auto" style="max-width: 800px;" data-aos="fade-up" data-aos-delay="200">
+        I’m <strong>Taha Saleem</strong>, a Data Science undergraduate at Punjab University College of Information Technology (PUCIT), expected to graduate in 2027. 
+        Passionate about solving problems with Machine Learning, Artificial Intelligence, and Data Analytics.
+      </p>
     </div>
   </section>
 
-  <!-- EDUCATION -->
-  <section class="py-5 bg-light border-top">
+  <!-- EXPERIENCE & HIGHLIGHTS -->
+  <section class="py-5 section-alt">
     <div class="container">
-      <h2 class="h4 mb-4">Education</h2>
-      <div class="card border-0 shadow-sm p-4">
-        <h3 class="h5 mb-1">BS in Data Science</h3>
-        <p class="mb-1">Punjab University College of Information Technology (PUCIT)</p>
-        <small class="text-secondary">Expected Graduation: 2027</small>
+      <h2 class="fw-bold mb-4 text-center" data-aos="fade-up">Highlights</h2>
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card shadow-sm h-100 border-0">
+            <div class="card-body text-center">
+              <i class="bi bi-code-slash text-primary fs-1 mb-3"></i>
+              <h5 class="card-title">150+ LeetCode Problems</h5>
+              <p class="card-text">Sharpening problem-solving with Data Structures & Algorithms (DSA).</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="card shadow-sm h-100 border-0">
+            <div class="card-body text-center">
+              <i class="bi bi-award text-warning fs-1 mb-3"></i>
+              <h5 class="card-title">Competition Achievements</h5>
+              <p class="card-text">Secured 7th place at MLSA Programming Competition, participated in Riphah Challenge 2024.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="card shadow-sm h-100 border-0">
+            <div class="card-body text-center">
+              <i class="bi bi-lightbulb text-success fs-1 mb-3"></i>
+              <h5 class="card-title">Projects</h5>
+              <p class="card-text">Built systems like Voice-Based Attendance, HR Analytics Predictor, and Summarization System.</p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <!-- EXTRACURRICULAR -->
-  <section class="py-5">
-    <div class="container">
-      <h2 class="h4 mb-4">Extracurricular Activities</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Coordinator — Sports Society (FCIT & EMS)</li>
-        <li class="list-group-item">Contributor to GitHub open-source repositories</li>
-        <li class="list-group-item">Active in university coding clubs & tech events</li>
-      </ul>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="py-4 border-top">
-    <div class="container text-center">
-      <small class="d-block">© <span id="year"></span> Taha Saleem</small>
+  <footer class="py-4 border-top text-center bg-white">
+    <div class="container">
+      <p class="mb-0">© <span id="year"></span> Taha Saleem — Built with Bootstrap</p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
