--- a/skills.html
+++ b/skills.html
@@ -4,17 +4,52 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Skills — Taha Saleem</title>
-  <meta name="description" content="Technical skills of Taha Saleem — Python, SQL, ML, Data Tools, Frameworks, and more." />
+  <meta name="description" content="Technical skills of Taha Saleem — Data Science undergraduate, AI & ML enthusiast.">
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  
+  <!-- AOS (Animate on Scroll) -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #f9fafb);
+    }
+    .skill-card {
+      transition: transform 0.3s, box-shadow 0.3s;
+      border: none;
+      border-radius: 1rem;
+    }
+    .skill-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
+    }
+    .section-light { background: #ffffff; }
+    .section-alt { background: #f8fafc; }
+    .badge-skill {
+      background-color: #0ea5e9;
+      color: #fff;
+      margin: 0.2rem;
+    }
+  </style>
 </head>
 <body>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> <strong>Taha&nbsp;Saleem</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"><span class="navbar-toggler-icon"></span></button>
+      <a class="navbar-brand fw-bold" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> Taha Saleem</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -27,93 +62,117 @@
     </div>
   </nav>
 
-  <!-- HERO -->
-  <header class="py-5 bg-light border-bottom">
-    <div class="container text-center">
-      <h1 class="display-5 fw-bold">Skills</h1>
-      <p class="lead text-secondary">Technologies and tools I use to build data-driven solutions</p>
-    </div>
-  </header>
-
-  <!-- SKILLS -->
-  <section class="py-5">
+  <!-- SKILLS SECTION -->
+  <section class="py-5 section-light">
     <div class="container">
+      <h1 class="fw-bold text-center mb-5" data-aos="fade-up">Technical Skills</h1>
       <div class="row g-4">
-        <div class="col-12 col-md-6">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body">
-              <h3 class="h5 mb-3"><i class="bi bi-code-slash text-primary me-2"></i>Languages</h3>
-              <span class="badge bg-secondary me-1 mb-1">Python</span>
-              <span class="badge bg-secondary me-1 mb-1">C++</span>
-              <span class="badge bg-secondary me-1 mb-1">SQL</span>
+
+        <!-- Programming Languages -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-code-slash fs-1 text-primary mb-3"></i>
+              <h5 class="card-title">Programming Languages</h5>
+              <p>
+                <span class="badge badge-skill">Python</span>
+                <span class="badge badge-skill">C++</span>
+                <span class="badge badge-skill">JavaScript</span>
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-6">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body">
-              <h3 class="h5 mb-3"><i class="bi bi-bar-chart-line text-success me-2"></i>Data Tools</h3>
-              <span class="badge bg-secondary me-1 mb-1">Power BI</span>
-              <span class="badge bg-secondary me-1 mb-1">MySQL</span>
-              <span class="badge bg-secondary me-1 mb-1">SQL Server</span>
-              <span class="badge bg-secondary me-1 mb-1">Pandas</span>
-              <span class="badge bg-secondary me-1 mb-1">NumPy</span>
-              <span class="badge bg-secondary me-1 mb-1">Matplotlib</span>
-              <span class="badge bg-secondary me-1 mb-1">Seaborn</span>
+        <!-- Tools & Frameworks -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-boxes fs-1 text-success mb-3"></i>
+              <h5 class="card-title">Tools & Frameworks</h5>
+              <p>
+                <span class="badge badge-skill">NumPy</span>
+                <span class="badge badge-skill">Pandas</span>
+                <span class="badge badge-skill">Matplotlib</span>
+                <span class="badge badge-skill">Scikit-learn</span>
+                <span class="badge badge-skill">PyTorch</span>
+                <span class="badge badge-skill">TensorFlow</span>
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-6">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body">
-              <h3 class="h5 mb-3"><i class="bi bi-boxes text-warning me-2"></i>Frameworks</h3>
-              <span class="badge bg-secondary me-1 mb-1">Streamlit</span>
-              <span class="badge bg-secondary me-1 mb-1">Gradio</span>
-              <span class="badge bg-secondary me-1 mb-1">Django</span>
+        <!-- Databases -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-database fs-1 text-warning mb-3"></i>
+              <h5 class="card-title">Databases</h5>
+              <p>
+                <span class="badge badge-skill">MySQL</span>
+                <span class="badge badge-skill">SQL Server</span>
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-6">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body">
-              <h3 class="h5 mb-3"><i class="bi bi-git text-danger me-2"></i>Version Control</h3>
-              <span class="badge bg-secondary me-1 mb-1">Git</span>
-              <span class="badge bg-secondary me-1 mb-1">GitHub</span>
+        <!-- Version Control -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-git fs-1 text-danger mb-3"></i>
+              <h5 class="card-title">Version Control</h5>
+              <p>
+                <span class="badge badge-skill">Git</span>
+                <span class="badge badge-skill">GitHub</span>
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-12">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body">
-              <h3 class="h5 mb-3"><i class="bi bi-book text-info me-2"></i>Concepts & Coursework</h3>
-              <span class="badge bg-secondary me-1 mb-1">Data Structures & Algorithms</span>
-              <span class="badge bg-secondary me-1 mb-1">OOP</span>
-              <span class="badge bg-secondary me-1 mb-1">Machine Learning</span>
-              <span class="badge bg-secondary me-1 mb-1">Artificial Intelligence</span>
-              <span class="badge bg-secondary me-1 mb-1">Data Visualization</span>
-              <span class="badge bg-secondary me-1 mb-1">DBMS</span>
-              <span class="badge bg-secondary me-1 mb-1">Programming Fundamentals</span>
-              <span class="badge bg-secondary me-1 mb-1">Assembly Language</span>
-              <span class="badge bg-secondary me-1 mb-1">Algorithm Design & Analysis</span>
+        <!-- Coursework -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-journal-code fs-1 text-info mb-3"></i>
+              <h5 class="card-title">Coursework</h5>
+              <p>
+                <span class="badge badge-skill">Assembly & Architecture</span>
+                <span class="badge badge-skill">Algorithms</span>
+                <span class="badge badge-skill">Databases</span>
+                <span class="badge badge-skill">AI</span>
+              </p>
             </div>
           </div>
         </div>
+
+        <!-- Problem Solving -->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="600">
+          <div class="card skill-card shadow-sm h-100">
+            <div class="card-body text-center">
+              <i class="bi bi-lightbulb fs-1 text-secondary mb-3"></i>
+              <h5 class="card-title">Problem Solving</h5>
+              <p>Solved <strong>150+</strong> LeetCode problems & regularly practice DSA challenges.</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="py-4 border-top">
-    <div class="container text-center">
-      <small class="d-block">© <span id="year"></span> Taha Saleem</small>
+  <footer class="py-4 border-top text-center bg-white">
+    <div class="container">
+      <p class="mb-0">© <span id="year"></span> Taha Saleem — Built with Bootstrap</p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
