--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,54 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact — Taha Saleem</title>
-  <meta name="description" content="Contact Taha Saleem — Data Science undergraduate, ML & AI enthusiast." />
+  <meta name="description" content="Contact Taha Saleem — Data Science undergraduate, AI & ML enthusiast.">
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  
+  <!-- AOS (Animate on Scroll) -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #f9fafb);
+    }
+    .contact-card {
+      border: none;
+      border-radius: 1rem;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .contact-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
+    }
+    .form-control:focus {
+      border-color: #0ea5e9;
+      box-shadow: 0 0 0 0.2rem rgba(14,165,233,0.25);
+    }
+    .btn-primary {
+      background-color: #0ea5e9;
+      border-color: #0ea5e9;
+    }
+    .btn-primary:hover {
+      background-color: #0284c7;
+      border-color: #0284c7;
+    }
+  </style>
 </head>
 <body>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> <strong>Taha&nbsp;Saleem</strong></a>
+      <a class="navbar-brand fw-bold" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> Taha Saleem</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,61 +67,70 @@
     </div>
   </nav>
 
-  <!-- HERO -->
-  <header class="py-5 bg-light border-bottom">
-    <div class="container text-center">
-      <h1 class="display-5 fw-bold">Contact</h1>
-      <p class="lead text-secondary">Let’s get in touch — I’d love to hear from you!</p>
-    </div>
-  </header>
-
   <!-- CONTACT SECTION -->
   <section class="py-5">
     <div class="container">
-      <div class="row g-4 align-items-center">
-        <div class="col-12 col-lg-6">
-          <h2 class="h4 mb-3">Reach Me At</h2>
-          <ul class="list-unstyled fs-5">
-            <li class="mb-2"><i class="bi bi-envelope text-primary me-2"></i><a href="mailto:tahasaleemdev@gmail.com">tahasaleemdev@gmail.com</a></li>
-            <li class="mb-2"><i class="bi bi-telephone text-primary me-2"></i><a href="tel:+923228426153">+92 322 8426153</a></li>
-            <li class="mb-2"><i class="bi bi-linkedin text-primary me-2"></i><a href="https://www.linkedin.com/in/taha-saleem-a5697a291/" target="_blank">LinkedIn</a></li>
-            <li class="mb-2"><i class="bi bi-github text-dark me-2"></i><a href="https://github.com/Taha-Saleem-43" target="_blank">GitHub</a></li>
-            <li class="mb-2"><i class="bi bi-code-slash text-warning me-2"></i><a href="https://leetcode.com/u/_Taha_dev/" target="_blank">LeetCode</a></li>
-          </ul>
+      <h1 class="fw-bold text-center mb-4" data-aos="fade-up">Get in Touch</h1>
+      <p class="text-center text-muted mb-5" data-aos="fade-up" data-aos-delay="100">
+        Feel free to reach out for collaborations, opportunities, or just to connect!
+      </p>
+      <div class="row g-4">
+        
+        <!-- Contact Form -->
+        <div class="col-lg-7" data-aos="fade-right">
+          <div class="card contact-card shadow-sm p-4">
+            <h5 class="mb-3">Send a Message</h5>
+            <form action="https://formspree.io/f/yourFormID" method="POST">
+              <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" name="name" class="form-control" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input type="email" name="_replyto" class="form-control" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Message</label>
+                <textarea name="message" rows="5" class="form-control" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary w-100">Send Message</button>
+            </form>
+          </div>
         </div>
-        <div class="col-12 col-lg-6">
-          <h2 class="h4 mb-3">Send a Message</h2>
-          <!-- Formspree form -->
-          <form action="https://formspree.io/f/mdkdrypo" method="POST">
-            <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" name="_replyto" placeholder="you@example.com" required>
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" name="message" rows="4" placeholder="Your message..." required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send</button>
-          </form>
-          <p class="small text-secondary mt-2">This form is powered by <a href="https://formspree.io" target="_blank">Formspree</a>. Your message will be delivered to my email.</p>
+
+        <!-- Contact Info -->
+        <div class="col-lg-5" data-aos="fade-left">
+          <div class="card contact-card shadow-sm p-4 h-100">
+            <h5 class="mb-3">Contact Details</h5>
+            <p><i class="bi bi-envelope text-primary me-2"></i> tahasaleemdev@gmail.com</p>
+            <p><i class="bi bi-telephone text-success me-2"></i> +92 322 8426153</p>
+            <p><i class="bi bi-geo-alt text-danger me-2"></i> Lahore, Pakistan</p>
+            <hr>
+            <h6>Find me on</h6>
+            <p>
+              <a href="https://github.com/Taha-Saleem-43/Voice-Base-Attendance-system" target="_blank" class="me-3"><i class="bi bi-github fs-4"></i></a>
+              <a href="https://pk.linkedin.com/in/taha-saleem-a5697a291" target="_blank" class="me-3"><i class="bi bi-linkedin fs-4 text-primary"></i></a>
+            </p>
+          </div>
         </div>
+
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="py-4 border-top">
-    <div class="container text-center">
-      <small class="d-block">© <span id="year"></span> Taha Saleem</small>
+  <footer class="py-4 border-top text-center bg-white">
+    <div class="container">
+      <p class="mb-0">© <span id="year"></span> Taha Saleem — Built with Bootstrap</p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
-
