--- a/contact.html
+++ b/contact.html
@@ -1,137 +1,190 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact — Taha Saleem</title>
-  <meta name="description" content="Contact Taha Saleem — Data Science undergraduate, AI & ML enthusiast.">
-  
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  
-  <!-- AOS (Animate on Scroll) -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - DataSci Portfolio</title>
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Main Navbar + AI Chat Styles -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #f9fafb);
-    }
-    .contact-card {
-      border: none;
-      border-radius: 1rem;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .contact-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-    }
-    .form-control:focus {
-      border-color: #0ea5e9;
-      box-shadow: 0 0 0 0.2rem rgba(14,165,233,0.25);
-    }
-    .btn-primary {
-      background-color: #0ea5e9;
-      border-color: #0ea5e9;
-    }
-    .btn-primary:hover {
-      background-color: #0284c7;
-      border-color: #0284c7;
-    }
-  </style>
+    <!-- Contact Page Specific Styles -->
+    <link rel="stylesheet" href="assets/css/style5.css">
+
+    <!-- Remix Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<body>
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> Taha Saleem</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="skills.html">Skills</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-          <li class="nav-item ms-lg-2"><a class="btn btn-primary" href="assets/Resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<body class="contact-page">
+    <!-- NAVBAR -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">DataSci <span>Portfolio</span></div>
+            <ul class="nav-links">
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Experience.html">Experience</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- CONTACT SECTION -->
-  <section class="py-5">
-    <div class="container">
-      <h1 class="fw-bold text-center mb-4" data-aos="fade-up">Get in Touch</h1>
-      <p class="text-center text-muted mb-5" data-aos="fade-up" data-aos-delay="100">
-        Feel free to reach out for collaborations, opportunities, or just to connect!
-      </p>
-      <div class="row g-4">
-        
+    <!-- CONTACT SECTION -->
+    <section class="contact-header">
+        <h1>Get In Touch</h1>
+        <p>Interested in collaboration or have questions about my projects? Let's connect!</p>
+    </section>
+
+    <!-- CONTACT CONTAINER -->
+    <section class="contact-container">
+        <!-- Contact Information -->
+        <div class="contact-info">
+            <h2>Contact Information</h2>
+            <p class="info-subtitle">I'm always open to discussing data science projects, research opportunities, or internship possibilities. Feel free to reach out!</p>
+
+            <div class="info-items">
+                <!-- Email -->
+                <div class="info-item">
+                    <div class="info-icon email-icon">
+                        <i class="ri-mail-line"></i>
+                    </div>
+                    <div class="info-details">
+                        <h4>Email</h4>
+                        <p>tahasaleemdev@gmail.com</p>
+                    </div>
+                </div>
+
+                <!-- Phone -->
+                <div class="info-item">
+                    <div class="info-icon phone-icon">
+                        <i class="ri-phone-line"></i>
+                    </div>
+                    <div class="info-details">
+                        <h4>Phone</h4>
+                        <p>+92 3228426153</p>
+                    </div>
+                </div>
+
+                <!-- Location -->
+                <div class="info-item">
+                    <div class="info-icon location-icon">
+                        <i class="ri-map-pin-line"></i>
+                    </div>
+                    <div class="info-details">
+                        <h4>Location</h4>
+                        <p>Lahore, Pakistan</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Social Links -->
+            <div class="social-links">
+                <a href="https://github.com/Taha-Saleem-43" target="_blank" class="social-link">
+                    <i class="ri-github-fill"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/taha-saleem-a5697a291/" target="_blank" class="social-link">
+                    <i class="ri-linkedin-box-fill"></i>
+                </a>
+                <a href="mailto:tahasaleemdev@gmail.com" class="social-link">
+                    <i class="ri-mail-fill"></i>
+                </a>
+            </div>
+        </div>
+
         <!-- Contact Form -->
-        <div class="col-lg-7" data-aos="fade-right">
-          <div class="card contact-card shadow-sm p-4">
-            <h5 class="mb-3">Send a Message</h5>
-            <form action="https://formspree.io/f/mdkdrypo" method="POST">
-              <div class="mb-3">
-                <label class="form-label">Name</label>
-                <input type="text" name="name" class="form-control" required>
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Email</label>
-                <input type="email" name="_replyto" class="form-control" required>
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Message</label>
-                <textarea name="message" rows="5" class="form-control" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Send Message</button>
+        <div class="contact-form-wrapper">
+            <!-- REPLACE 'YOUR_FORM_ID' with your actual Formspree form ID -->
+            <form action="https://formspree.io/f/mdkdrypo" method="POST" class="contact-form">
+                <!-- Name Field -->
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input 
+                        type="text" 
+                        id="name" 
+                        name="name" 
+                        placeholder="Your name" 
+                        required
+                    >
+                </div>
+
+                <!-- Email Field -->
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input 
+                        type="email" 
+                        id="email" 
+                        name="email" 
+                        placeholder="your.email@example.com" 
+                        required
+                    >
+                </div>
+
+                <!-- Subject Field (Optional) -->
+                <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input 
+                        type="text" 
+                        id="subject" 
+                        name="subject" 
+                        placeholder="Project inquiry, collaboration, etc."
+                    >
+                </div>
+
+                <!-- Message Field -->
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea 
+                        id="message" 
+                        name="message" 
+                        rows="5" 
+                        placeholder="Tell me about your project or opportunity..." 
+                        required
+                    ></textarea>
+                </div>
+
+                <!-- Submit Button -->
+                <button type="submit" class="submit-btn">
+                    <i class="ri-send-plane-line"></i>
+                    Send Message
+                </button>
+
+                <!-- Formspree Status Messages -->
+                <p class="form-status" id="form-status"></p>
             </form>
-          </div>
         </div>
+    </section>
 
-        <!-- Contact Info -->
-        <div class="col-lg-5" data-aos="fade-left">
-          <div class="card contact-card shadow-sm p-4 h-100">
-            <h5 class="mb-3">Contact Details</h5>
-            <p><i class="bi bi-envelope text-primary me-2"></i> tahasaleemdev@gmail.com</p>
-            <p><i class="bi bi-telephone text-success me-2"></i> +92 322 8426153</p>
-            <p><i class="bi bi-geo-alt text-danger me-2"></i> Lahore, Pakistan</p>
-            <hr>
-            <h6>Find me on</h6>
-            <p>
-              <a href="https://github.com/Taha-Saleem-43/Voice-Base-Attendance-system" target="_blank" class="me-3"><i class="bi bi-github fs-4"></i></a>
-              <a href="https://pk.linkedin.com/in/taha-saleem-a5697a291" target="_blank" class="me-3"><i class="bi bi-linkedin fs-4 text-primary"></i></a>
-            </p>
-          </div>
-        </div>
+    <!-- AI Chat Widget -->
+    <div id="ai-chat-widget" aria-hidden="true">
+        <button id="chat-toggle" aria-label="Open chat">
+            <i class="ri-chat-1-line"></i>
+        </button>
 
-      </div>
+        <aside id="chat-panel" aria-hidden="true" role="dialog" aria-label="AI Chat">
+            <header class="chat-header">
+                <div class="chat-title">
+                    <i class="ri-robot-line"></i>
+                    <span>AI Bot</span>
+                </div>
+                <button id="chat-close" aria-label="Close chat"><i class="ri-close-line"></i></button>
+            </header>
+
+            <div id="chat-messages" class="chat-messages" role="log" aria-live="polite">
+                <div class="chat-system">Hello! 👋 I'm Taha's AI Assistant</div>
+            </div>
+
+            <form id="chat-form" class="chat-form" autocomplete="off">
+                <input id="chat-input" type="text" placeholder="Type a message..." aria-label="Type a message" />
+                <button type="submit" id="chat-send" aria-label="Send message"><i class="ri-send-plane-line"></i></button>
+            </form>
+        </aside>
     </div>
-  </section>
 
-  <!-- FOOTER -->
-  <footer class="py-4 border-top text-center bg-white">
-    <div class="container">
-      <p class="mb-0">© <span id="year"></span> Taha Saleem — Built with Bootstrap</p>
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    <!-- JS file -->
+    <script src="assets/js/chat.js"></script>
 </body>
 </html>
-
