--- a/skills.html
+++ b/skills.html
@@ -1,178 +1,152 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Skills — Taha Saleem</title>
-  <meta name="description" content="Technical skills of Taha Saleem — Data Science undergraduate, AI & ML enthusiast.">
-  
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  
-  <!-- AOS (Animate on Scroll) -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills & Expertise - DataSci Portfolio</title>
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Main Navbar + AI Chat Styles -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #f9fafb);
-    }
-    .skill-card {
-      transition: transform 0.3s, box-shadow 0.3s;
-      border: none;
-      border-radius: 1rem;
-    }
-    .skill-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-    }
-    .section-light { background: #ffffff; }
-    .section-alt { background: #f8fafc; }
-    .badge-skill {
-      background-color: #0ea5e9;
-      color: #fff;
-      margin: 0.2rem;
-    }
-  </style>
+    <!-- Skills Page Specific Styles -->
+    <link rel="stylesheet" href="assets/css/style2.css">
+
+    <!-- Remix Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<body>
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><i class="bi bi-braces-asterisk text-primary"></i> Taha Saleem</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link active" href="skills.html">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item ms-lg-2"><a class="btn btn-primary" href="assets/Resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-      </div>
+<body class="skills-page">
+    <!-- NAVBAR -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">DataSci <span>Portfolio</span></div>
+            <ul class="nav-links">
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Experience.html">Experience</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- SKILLS SECTION -->
+    <section id="skills" class="skills-header">
+        <h1>Skills & Expertise</h1>
+        <h2>Technical skills and tools I use to extract insights from data and build intelligent systems</h2>
+    </section>
+
+    <!-- SKILLS GRID -->
+    <section class="skills-grid">
+        <!-- Machine Learning -->
+        <div class="skill-card">
+            <div class="skill-icon icon-ml"><i class="ri-brain-line"></i></div>
+            <h3>Machine Learning</h3>
+            <ul>
+                <li>Scikit-learn</li>
+                <li>TensorFlow</li>
+                <li>PyTorch</li>
+                <li>XGBoost</li>
+                <li>Neural Networks</li>
+            </ul>
+        </div>
+
+        <!-- Data Analysis -->
+        <div class="skill-card">
+            <div class="skill-icon icon-da"><i class="ri-bar-chart-line"></i></div>
+            <h3>Data Analysis</h3>
+            <ul>
+                <li>Pandas</li>
+                <li>NumPy</li>
+                <li>Statistical Analysis</li>
+                <li>A/B Testing</li>
+                <li>Hypothesis Testing</li>
+            </ul>
+        </div>
+
+        <!-- Data Visualization -->
+        <div class="skill-card">
+            <div class="skill-icon icon-dv"><i class="ri-line-chart-line"></i></div>
+            <h3>Data Visualization</h3>
+            <ul>
+                <li>Matplotlib</li>
+                <li>Seaborn</li>
+                <li>Plotly</li>
+                <li>Tableau</li>
+                <li>Power BI</li>
+            </ul>
+        </div>
+
+        <!-- Programming -->
+        <div class="skill-card">
+            <div class="skill-icon icon-pg"><i class="ri-code-s-slash-line"></i></div>
+            <h3>Programming</h3>
+            <ul>
+                <li>Python</li>
+                <li>R</li>
+                <li>SQL</li>
+                <li>Git</li>
+                <li>APIs</li>
+            </ul>
+        </div>
+
+        <!-- Database & Warehouse -->
+        <div class="skill-card">
+            <div class="skill-icon icon-bd"><i class="ri-database-2-line"></i></div>
+            <h3>Database & Data Warehousing</h3>
+            <ul>
+                <li>SQL</li>
+                <li>PostgreSQL</li>
+                <li>MySQL</li>
+                <li>Data Warehousing</li>
+                <li>Business Intelligence</li>
+            </ul>
+        </div>
+
+        <!-- Deep Learning -->
+        <div class="skill-card">
+            <div class="skill-icon icon-dl"><i class="ri-brain-line"></i></div>
+            <h3>Deep Learning</h3>
+            <ul>
+                <li>CNNs</li>
+                <li>RNNs</li>
+                <li>GANs</li>
+                <li>LSTMs</li>
+                <li>Autoencoders</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- ======== Chat Widget ======== -->
+    <div id="ai-chat-widget" aria-hidden="true">
+        <button id="chat-toggle" aria-label="Open chat">
+            <i class="ri-chat-1-line"></i>
+        </button>
+
+        <aside id="chat-panel" aria-hidden="true" role="dialog" aria-label="AI Chat">
+            <header class="chat-header">
+                <div class="chat-title">
+                    <i class="ri-robot-line"></i>
+                    <span>AI Bot</span>
+                </div>
+                <button id="chat-close" aria-label="Close chat"><i class="ri-close-line"></i></button>
+            </header>
+
+            <div id="chat-messages" class="chat-messages" role="log" aria-live="polite">
+                <div class="chat-system">Hello! 👋 I'm Taha's AI Assistant</div>
+            </div>
+
+            <form id="chat-form" class="chat-form" autocomplete="off">
+                <input id="chat-input" type="text" placeholder="Type a message..." aria-label="Type a message" />
+                <button type="submit" id="chat-send" aria-label="Send message"><i class="ri-send-plane-line"></i></button>
+            </form>
+        </aside>
     </div>
-  </nav>
 
-  <!-- SKILLS SECTION -->
-  <section class="py-5 section-light">
-    <div class="container">
-      <h1 class="fw-bold text-center mb-5" data-aos="fade-up">Technical Skills</h1>
-      <div class="row g-4">
-
-        <!-- Programming Languages -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-code-slash fs-1 text-primary mb-3"></i>
-              <h5 class="card-title">Programming Languages</h5>
-              <p>
-                <span class="badge badge-skill">Python</span>
-                <span class="badge badge-skill">C++</span>
-                <span class="badge badge-skill">JavaScript</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tools & Frameworks -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-boxes fs-1 text-success mb-3"></i>
-              <h5 class="card-title">Tools & Frameworks</h5>
-              <p>
-                <span class="badge badge-skill">NumPy</span>
-                <span class="badge badge-skill">Pandas</span>
-                <span class="badge badge-skill">Matplotlib</span>
-                <span class="badge badge-skill">Scikit-learn</span>
-                <span class="badge badge-skill">PyTorch</span>
-                <span class="badge badge-skill">TensorFlow</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Databases -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-database fs-1 text-warning mb-3"></i>
-              <h5 class="card-title">Databases</h5>
-              <p>
-                <span class="badge badge-skill">MySQL</span>
-                <span class="badge badge-skill">SQL Server</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Version Control -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-git fs-1 text-danger mb-3"></i>
-              <h5 class="card-title">Version Control</h5>
-              <p>
-                <span class="badge badge-skill">Git</span>
-                <span class="badge badge-skill">GitHub</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Coursework -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-journal-code fs-1 text-info mb-3"></i>
-              <h5 class="card-title">Coursework</h5>
-              <p>
-                <span class="badge badge-skill">Assembly & Architecture</span>
-                <span class="badge badge-skill">Algorithms</span>
-                <span class="badge badge-skill">Databases</span>
-                <span class="badge badge-skill">AI</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Problem Solving -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="600">
-          <div class="card skill-card shadow-sm h-100">
-            <div class="card-body text-center">
-              <i class="bi bi-lightbulb fs-1 text-secondary mb-3"></i>
-              <h5 class="card-title">Problem Solving</h5>
-              <p>Solved <strong>150+</strong> LeetCode problems & regularly practice DSA challenges.</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="py-4 border-top text-center bg-white">
-    <div class="container">
-      <p class="mb-0">© <span id="year"></span> Taha Saleem — Built with Bootstrap</p>
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    <!-- JS file -->
+    <script src="assets/js/chat.js"></script>
 </body>
 </html>
