--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </p>
 
         <div class="buttons fade-in delay-3">
-            <a href="Projects.html" class="btn primary">View My Projects</a>
+            <a href="projects.html" class="btn primary">View My Projects</a>
             <a href="contact.html" class="btn secondary">Get In Touch</a>
         </div>
         <div class="socials fade-in delay-4">
